[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoevo"
description = "Economy Evolution Environment for Currency Emergence Research"
requires-python = ">=3.7, <3.11"
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "gymnasium",
    "pettingzoo", 
    "ortools",
    "pyyaml"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
    version = { attr = "ecoevo.__version__" }
