[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoevo"
description = "Economy Evolution Environment for Currency Emergence Research"
requires-python = ">=3.7, <3.11"
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "gymnasium",
    "pettingzoo", 
    "ortools",
    "pyyaml",
    "rich",
    "pydantic",
    "rich",
    "loguru",
    "dash",
    "plotly",
    "matplotlib",
    "protobuf<=3.20.3",
    "itsdangerous==2.0.1",
    "werkzeug~=2.0.0",
    "dm-tree"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
    version = { attr = "ecoevo.__version__" }

[tool.setuptools]
include-package-data = true
