[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoevo"
description = "Economy Evolution Environment for Currency Emergence Research"
requires-python = ">=3.7, <3.11"
readme = "README.md"
dependencies = [
    "numpy",
    "ortools",
    "pyyaml",
    "pydantic",
    "loguru",
    "protobuf<=3.20.1",
    "dm-tree"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "toml",
    "pre-commit",
    "pytype",
    "tox",
    "pytest",
    "pytest-cov",
    "isort",
    "autoflake",
    "yapf",
    "bump2version",
    "rich",
]

render = [
    "itsdangerous==2.0.1",
    "werkzeug~=2.0.0",
    "dash",
    "dash-bootstrap-components",
    "dash_daq",
    "plotly",
    "matplotlib",
    "rich",
]


[tool.setuptools.dynamic]
    version = { attr = "ecoevo.__version__" }

[tool.setuptools]
include-package-data = true
packages = ["ecoevo"]

[tool.yapf]
    column_limit = 120
    indent_width = 4

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test",
]
